Modificia stile titoli

--- a/Lezione_1/Esercizi.ipynb
+++ b/Lezione_1/Esercizi.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esercizio 1: fornire tre esempi di cicli producono una lista e poi riscrivi lo stesso codice usando la list comprehension"
+    "# Esercizio 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Fornire tre esempi di cicli producono una lista e poi riscrivi lo stesso codice usando la list comprehension**"
    ]
   },
   {
@@ -130,7 +137,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esercizio 2: creazione e operazioni su un array di numeri primi"
+    "# Esercizio 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Creazione e operazioni su un array di numeri primi**"
    ]
   },
   {
@@ -207,7 +221,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esercizio 3: operazioni su array"
+    "# Esercizio 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Operazioni su array**"
    ]
   },
   {
