Modifica stile testo

--- a/Lezione_1/Esercizi.ipynb
+++ b/Lezione_1/Esercizi.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
    "source": [
     "# Creazione array contenente i numeri primi compresi tra 0 e 10\n",
     "\n",
-    "# Importiamo il modulo Nunpy\n",
+    "# Importiamo il modulo Numpy\n",
     "import numpy as np\n",
     "\n",
     "# Creazione lista contenente i numeri primi compresi tra 0 e 10 riutilizzando la funzione 'is_prime' dell'esercizio precedente\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -233,14 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L'array 'a' è: [91 35 74 12 65 10 82  5 11 88]\n"
+      "L'array 'a' è: [20 28 55 56 98 83 83 61 12 77]\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L'array 'c' è: [88 11  5 82 10 65 12 74 35 91]\n"
+      "L'array 'c' è: [77 12 61 83 83 98 56 55 28 20]\n"
      ]
     }
    ],
