--- a/Lezione_1/Esercizi.ipynb
+++ b/Lezione_1/Esercizi.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -233,14 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L'array 'a' è: [20 28 55 56 98 83 83 61 12 77]\n"
+      "L'array 'a' è: [96 88 11 13 63 11 37 24 89 22]\n"
      ]
     }
    ],
@@ -248,14 +248,14 @@
     "# Creiamo un array che chiameremo 'a' contenente 10 numeri causali tra 0 e 100\n",
     "\n",
     "# Creiamo l'array\n",
-    "a = np.random.randint(0, 100, size=10) \n",
+    "a = np.random.randint(1, 100, size=10) \n",
     "\n",
     "print(f\"L'array 'a' è: {a}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -280,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L'array 'c' è: [77 12 61 83 83 98 56 55 28 20]\n"
+      "L'array 'c' è: [22 89 24 37 11 63 13 11 88 96]\n"
      ]
     }
    ],
@@ -298,6 +298,42 @@
     "c = np.flip(a)\n",
     "\n",
     "print(f\"L'array 'c' è: {c}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La divisione ha dato come risultato l'array [4.36 0.99 0.46 0.35 5.73 0.17 2.85 2.18 1.01 0.23]\n",
+      "La divisione ha dato come risultato la lista [0.71, 0.28, 1.49, 0.69, 0.98, 2.87, 0.81, 0.06, 0.46, 1.48, 0.06]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dividiamo l'array 'a' per l'array 'c'\n",
+    "\n",
+    "print(f\"La divisione ha dato come risultato l'array {np.round(a / c, 2)}\")\n",
+    "\n",
+    "# Dividiamo tra di loro due liste causali 'j' e 't'\n",
+    "\n",
+    "# Importiamo il modulo 'random'\n",
+    "import random\n",
+    "\n",
+    "# Creazione delle liste tramite list comprehension\n",
+    "j = [random.randint(1, 100) for x in range(11)]\n",
+    "t = [random.randint(1, 100) for x in range(11)]\n",
+    "\n",
+    "# La lista 'res' conterrà al suo interno il risultato della divisione tra gli elementi delle due liste\n",
+    "res = []\n",
+    "for i in range(11):\n",
+    "    res.append(round(j[i] / t[i], 2))\n",
+    "\n",
+    "print(f\"La divisione ha dato come risultato la lista {res}\")"
    ]
   }
  ],
