Modifica consegne, esercizi 1:5 lezione 2

--- a/Lezione_1/Esercizi_l1.ipynb
+++ b/Lezione_1/Esercizi_l1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Fornire tre esempi di cicli producono una lista e poi riscrivi lo stesso codice usando la list comprehension**"
+    "**Trasformare cicli in list comprehension**"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Creazione e operazioni su un array di numeri primi**"
+    "**Vettore di Numeri Primi**"
    ]
   },
   {
