--- a/Lezione_2/Esercizi_l2.ipynb
+++ b/Lezione_2/Esercizi_l2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -221,16 +221,16 @@
      "output_type": "stream",
      "text": [
       "L'array casuale generato è: \n",
-      "[[0.47 0.27 0.19]\n",
-      " [0.76 0.88 0.49]\n",
-      " [0.66 0.84 0.77]\n",
-      " [0.05 0.52 0.2 ]\n",
-      " [0.88 0.7  0.82]\n",
-      " [0.65 0.67 0.19]\n",
-      " [0.56 0.59 0.59]\n",
-      " [0.76 0.76 0.16]\n",
-      " [0.79 0.02 0.96]\n",
-      " [0.15 0.46 0.25]]\n"
+      "[[0.34 0.31 0.3 ]\n",
+      " [0.59 0.66 0.05]\n",
+      " [0.54 0.14 0.69]\n",
+      " [0.52 0.01 0.94]\n",
+      " [0.66 0.77 0.49]\n",
+      " [0.13 0.62 0.51]\n",
+      " [0.79 0.37 0.19]\n",
+      " [0.86 0.46 0.71]\n",
+      " [0.99 0.3  0.38]\n",
+      " [0.71 0.41 0.5 ]]\n"
      ]
     }
    ],
@@ -244,23 +244,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Il valore più vicino a 0.5 a riga 0 è 0.47 con una differenza di 0.03\n",
-      "Il valore più vicino a 0.5 a riga 1 è 0.49 con una differenza di 0.01\n",
-      "Il valore più vicino a 0.5 a riga 2 è 0.66 con una differenza di 0.16\n",
+      "Il valore più vicino a 0.5 a riga 0 è 0.34 con una differenza di 0.16\n",
+      "Il valore più vicino a 0.5 a riga 1 è 0.59 con una differenza di 0.09\n",
+      "Il valore più vicino a 0.5 a riga 2 è 0.54 con una differenza di 0.04\n",
       "Il valore più vicino a 0.5 a riga 3 è 0.52 con una differenza di 0.02\n",
-      "Il valore più vicino a 0.5 a riga 4 è 0.7 con una differenza di 0.2\n",
-      "Il valore più vicino a 0.5 a riga 5 è 0.65 con una differenza di 0.15\n",
-      "Il valore più vicino a 0.5 a riga 6 è 0.56 con una differenza di 0.06\n",
-      "Il valore più vicino a 0.5 a riga 7 è 0.76 con una differenza di 0.26\n",
-      "Il valore più vicino a 0.5 a riga 8 è 0.79 con una differenza di 0.29\n",
-      "Il valore più vicino a 0.5 a riga 9 è 0.46 con una differenza di 0.04\n"
+      "Il valore più vicino a 0.5 a riga 4 è 0.49 con una differenza di 0.01\n",
+      "Il valore più vicino a 0.5 a riga 5 è 0.51 con una differenza di 0.01\n",
+      "Il valore più vicino a 0.5 a riga 6 è 0.37 con una differenza di 0.13\n",
+      "Il valore più vicino a 0.5 a riga 7 è 0.46 con una differenza di 0.04\n",
+      "Il valore più vicino a 0.5 a riga 8 è 0.38 con una differenza di 0.12\n",
+      "Il valore più vicino a 0.5 a riga 9 è 0.5 con una differenza di 0.0\n"
      ]
     }
    ],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -545,6 +545,91 @@
     "second_sum = np.sum(salary_fl)\n",
     "\n",
     "print(f\"La differenza è {second_sum - first_sum}$\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Esercizio 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Valori di CO2**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Il path del file 'CO2_emissioni.txt' è /home/edo/Scrivania/Programmazione/Laboratorio di Programmazione/-ProgrammingLab2/Lezione_2/CO2_emissioni.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Carichiamo il file sulle emissioni di CO2\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "# Generazione di 200 valori casuali di emissioni di CO2 in tonnellate per anno \n",
+    "# Supponiamo emissioni tra 4 e 20 tonnellate per persona \n",
+    "co2_emissions = np.round(np.random.uniform(4, 20, 200), 2)\n",
+    "\n",
+    "# Nome del file di output\n",
+    "output_file = \"/home/edo/Scrivania/Programmazione/Laboratorio di Programmazione/-ProgrammingLab2/Lezione_2/CO2_emissioni.txt\"\n",
+    "\n",
+    "# Salvataggio su file\n",
+    "np.savetxt(output_file, co2_emissions, fmt=\"%.2f\")\n",
+    "\n",
+    "print(f\"Il path del file 'CO2_emissioni.txt' è {output_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La media dei valori sopra le 18 tonnellate è 19.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcoliamo quanti valori ci CO2 sono sopra la soglia di 18 tonnellate per anno ed il loro valore medio\n",
+    "\n",
+    "# Utilizziano la funzione 'mean' del modulo NumPy\n",
+    "print(f\"La media dei valori sopra le 18 tonnellate è {np.round(np.mean(co2_emissions[co2_emissions > 18]), 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La frazione totale di emissione sopra la soglia è 0.2215\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcolare la frazione totale di emissione sopra la soglia (somma totale sopra la soglia/somma totale)\n",
+    "\n",
+    "# Utilizziano la funzione 'mean' e 'sum' del modulo NumPy\n",
+    "print(f\"La frazione totale di emissione sopra la soglia è {np.round(np.sum(co2_emissions[co2_emissions > 18]) / np.sum(co2_emissions), 4)}\")"
    ]
   }
  ],
