--- a/Lezione_2/Esercizi_l2.ipynb
+++ b/Lezione_2/Esercizi_l2.ipynb
@@ -631,6 +631,242 @@
     "# Utilizziano la funzione 'mean' e 'sum' del modulo NumPy\n",
     "print(f\"La frazione totale di emissione sopra la soglia è {np.round(np.sum(co2_emissions[co2_emissions > 18]) / np.sum(co2_emissions), 4)}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Esercizio 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Analisi di una matrice**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrice 'sruvey': \n",
+      "[[   25 40000    10]\n",
+      " [   32 52000    12]\n",
+      " [   40 63000    14]\n",
+      " [   29 47000    11]\n",
+      " [   35 58000    13]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creiamo la matrice 'survey contenente età, reddito e anni di istruzione di alcuni intervistati\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "survey_matrix = np.array([ [25, 40000, 10], [32, 52000, 12], [40, 63000, 14], [29, 47000, 11], [35, 58000, 13] ])\n",
+    "print(f\"Matrice 'sruvey': \\n{survey_matrix}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La matrice contenente i dati degli intervistati con almeno 12 anni di istruzione è: \n",
+      "[[   32 52000    12]\n",
+      " [   40 63000    14]\n",
+      " [   35 58000    13]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# selezioniamo gli intervistati con almeno 12 anni di istruzione attraverso un test logico\n",
+    "\n",
+    "print(f\"La matrice contenente i dati degli intervistati con almeno 12 anni di istruzione è: \\n{survey_matrix[survey_matrix[:,2] >= 12]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I redditi degli intervistati con almeno 12 anni di istruzione sono: [52000 63000 58000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Selezionare i redditi degli intervistati con almeno 12 anni di istruzione in un unica riga\n",
+    "\n",
+    "# Utilizziamo anche qui un test logico ma selezionando solo la seconda colonna\n",
+    "print(f\"I redditi degli intervistati con almeno 12 anni di istruzione sono: {survey_matrix[:,1][survey_matrix[:,2] >= 12]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Il reddito medio degli intervistati con almeno 12 anni di istruzione è 57666.67€\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcolare il reddito medio degli intervistati con almeno 12 anni di istruzione in un'unica riga\n",
+    "\n",
+    "# Utilizziamo la funzione 'sum' sul test logico fatto precedentemente\n",
+    "print(f\"Il reddito medio degli intervistati con almeno 12 anni di istruzione è {np.round(np.mean(survey_matrix[:,1][survey_matrix[:,2] >= 12]),2)}€\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Esercizio 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Rimpiazzare gli outliers**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test passato con successo\n",
+      "Il cittadino più anziano ha esattamente 112 anni\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generiamo l'array 'ages'\n",
+    "\n",
+    "# Generiamo una classe di errori personalizzati\n",
+    "class Lez2Exception(Exception):\n",
+    "    pass\n",
+    "\n",
+    "ages = np.array([92, 108, 75, 63, 62, 66, 90, 98, 97, 92, 60, 107, 90, 71, 97, 86, 55, 55,\n",
+    "                 98, 57, 96, 104, 96, 94, 72, 98, 111, 98, 89, 69, 77, 92, 85, 101, 93, 100,\n",
+    "                 90, 101, 96, 98, 999, 87, 106, 86, 108, 55, 67, 65, 68, 59, 67, 72, 57, 79,\n",
+    "                 95, 67, 86, 70, 91, 111, 67, 75, 59, 88, 90, 99, 94, 65, 111, 103, 100, 70,\n",
+    "                 63, 65, 100, 110, 999, 70, 57, 75, 56, 104, 111, 90, 74, 100, 90, 86, 88, 99,\n",
+    "                 58, 103, 88, 103, 64, 96, 105, 89, 83, 65, 100, 62, 73, 105, 83, 105, 58, 96,\n",
+    "                 77, 74, 95, 109, 91, 101, 91, 999, 63, 111, 97, 108, 75, 77, 73, 58, 94, 83,\n",
+    "                 90, 61, 110, 107, 105, 85, 64, 66, 71, 107, 105, 72, 78, 66, 100, 102, 72, 999,\n",
+    "                 74, 68, 73, 72, 90, 93, 99, 55, 92, 83, 58, 71, 89, 75, 98, 87, 999, 78,\n",
+    "                 97, 71, 106, 83, 58, 81, 100, 72, 93, 70, 65, 60, 95, 107, 94, 77, 87, 90,\n",
+    "                 82, 56, 99, 107, 86, 56, 73, 96, 64, 69, 64, 92, 57, 104, 110, 69, 66, 68,\n",
+    "                 84, 89, 72, 80, 55, 75, 87, 57, 106, 69, 66, 62, 102, 76, 111, 999, 96, 83,\n",
+    "                 84, 61, 102, 63, 107, 63, 76, 58, 83, 58, 61, 71, 77, 90, 74, 100, 103, 74,\n",
+    "                 92, 102, 63, 87, 93, 61, 63, 86, 74, 98, 64, 999, 78, 95, 84, 81, 107, 85,\n",
+    "                 79, 82, 89, 65, 107, 57, 74, 77, 97, 92, 58, 96, 105, 60, 55, 74, 57, 80,\n",
+    "                 62, 85, 87, 62, 999, 71, 74, 70, 97, 59, 82, 96, 105, 70, 89, 105, 60, 70,\n",
+    "                 87, 999, 64, 108, 107, 104, 85, 95, 108, 74, 64, 97, 89, 88, 79, 67, 81, 92,\n",
+    "                 63, 80, 76, 94, 104, 67, 73, 61, 99, 96, 68, 90, 86, 79, 85, 111, 75, 98,\n",
+    "                 81, 111, 108, 103, 85, 72, 108, 102, 999, 64, 107, 112, 66, 93, 89, 78, 66, 92,\n",
+    "                 63, 101, 92, 64, 72, 56, 71, 64, 87, 78, 107, 85, 109, 95, 69, 111, 64, 72,\n",
+    "                 55, 66, 99, 57, 78, 55, 58, 90, 88, 71, 90, 103, 92, 98, 67, 97, 77, 68,\n",
+    "                 77, 59, 78, 69, 77, 81, 61, 99, 999, 85, 78, 104, 97, 95, 74, 70, 69, 83,\n",
+    "                 68, 68, 77, 60, 85, 82, 93, 66, 71, 62, 64, 107, 999, 65, 78, 59, 83, 67,\n",
+    "                 108,  58,  95, 106,  83,  79,  67,  59,  96,  90,  55,  55,  96, 109,  82,  55, 101,  58,\n",
+    "                 97, 77, 60, 81, 999, 81, 75, 100, 66, 65, 105, 94, 101, 56, 999, 59, 105, 59,\n",
+    "                 93, 56, 104, 74, 81, 62, 76, 65, 107, 60, 107, 98, 77, 86, 83, 104, 74, 69,\n",
+    "                 97, 80, 91, 56, 108, 87, 65, 91, 93, 60, 91, 110, 107, 88, 96, 70, 60, 99,\n",
+    "                 66, 91, 107, 65, 81, 109, 84, 106, 80, 92, 78, 84, 91, 59])\n",
+    "\n",
+    "# Creiamo un nuovo array in cui verranno rimosse tutte le età equivalenti a 999\n",
+    "new_ages = ages[ages != 999]\n",
+    "\n",
+    "# Cicliamo sull'array 'new_ages' per controllare che non ci siano errori\n",
+    "counter = 0\n",
+    "for i in range(0,len(new_ages)):\n",
+    "\n",
+    "    if new_ages[i] == 999:\n",
+    "        print(f\"Elemento trovato in posizione {i}\")\n",
+    "        counter += 1\n",
+    "\n",
+    "if counter > 0:\n",
+    "    raise Lez2Exception(f\"Errore: l'array 'new_ages' contiene l'elemento 999 {counter} volte, ma non dovrebbe\")\n",
+    "else:\n",
+    "    print(f\"Test passato con successo\")\n",
+    "\n",
+    "# Calcoliamo ora l'età del cittadino più anziano attraverso la funzione 'max' del modulo 'NumPy'\n",
+    "print(f\"Il cittadino più anziano ha esattamente {np.max(new_ages)} anni\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Esercizio 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Generazione random di storie**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indici selezionati: [12, 31, 29, 40, 3]\n",
+      "Parole selezionate: ['PROVA', 'ANNUNCIO', 'BIRILLO DA BOWLING', 'VANTAGGIO', 'APPLICAZIONE']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importiamo il modulo 'rand'\n",
+    "import random\n",
+    "\n",
+    "# Definiamo la lista 'lista_parole'\n",
+    "lista_parole = [\n",
+    "    'INSEDIAMENTO', 'SEPARAZIONE', 'DIFFERENZA', 'APPLICAZIONE', 'ATTEGGIAMENTO', 'VERDURA', 'IMPERO', 'RICEVIMENTO',\n",
+    "    'IGNORANZA', 'BIOGRAFIA', 'VISIONE', 'AGENTE DI POLIZIA', 'PROVA', 'PRESTAZIONE', 'PRESENTAZIONE', 'PARENTE',\n",
+    "    'GIUSTIFICAZIONE', 'FILOSOFIA', 'DIREZIONE', 'BENEFICIARIO', 'BATTERIA', 'CERIMONIA', 'AGONIA', 'RECUPERO',\n",
+    "    'ALFABETIZZAZIONE', 'CONSEGNA', 'SERBATOIO', 'VOLONTARIO', 'DEPOSITO', 'BIRILLO DA BOWLING', 'NEMICO', 'ANNUNCIO',\n",
+    "    'CARAMELLA ZUCCHERATA', 'FULMINE', 'PALLONCINO', 'COPERTA', 'SCOPERTA', 'PENALITÀ', 'GENERALE', 'ALPACA',\n",
+    "    'VANTAGGIO', 'HOT DOG', 'ABITO', 'MATEMATICA', 'VARIANTE'\n",
+    "]\n",
+    "\n",
+    "random_index = random.choices(range(len(lista_parole)), k=5)\n",
+    "print(f\"Indici selezionati: {random_index}\")\n",
+    "\n",
+    "selected_word = [lista_parole[i] for i in random_index]\n",
+    "print(f\"Parole selezionate: {selected_word}\")"
+   ]
   }
  ],
  "metadata": {
