--- a/Lezione_2/Esercizi_l2.ipynb
+++ b/Lezione_2/Esercizi_l2.ipynb
@@ -835,15 +835,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indici selezionati: [12, 31, 29, 40, 3]\n",
-      "Parole selezionate: ['PROVA', 'ANNUNCIO', 'BIRILLO DA BOWLING', 'VANTAGGIO', 'APPLICAZIONE']\n"
+      "Indici selezionati: [7, 8, 21, 39, 18]\n",
+      "Parole selezionate: ['RICEVIMENTO', 'IGNORANZA', 'CERIMONIA', 'ALPACA', 'DIREZIONE']\n"
      ]
     }
    ],
@@ -866,6 +866,52 @@
     "\n",
     "selected_word = [lista_parole[i] for i in random_index]\n",
     "print(f\"Parole selezionate: {selected_word}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ecco la storia definitiva: \n",
+      "In epoche passate, viveva una donna saggia che era molto orgogliosa dell'antico RICEVIMENTO che proteggeva. Quando un anziano del villaggio venne a chiederle consiglio su come garantire al meglio un raccolto abbondante e le offrì il IGNORANZA come dono, i suoi occhi si spalancarono e lei esclamò una sola parola, \"CERIMONIA\".Radunò il villaggio e, per i successivi 100 giorni, su sua richiesta, gli abitanti cercarono nella foresta un ALPACA.Nel 101° giorno, il bambino più giovane del villaggio trovò ciò che stavano cercando e tutti corsero dalla donna saggia per donarglielo.Con un sorriso da un orecchio all’altro, e cantando canti di festa, la donna saggia guardò i suoi compaesani e disse: \"Ora è giunto il tempo del banchetto - nessuno rimarrà mai più senza DIREZIONE\" Ci fu grande gioia e celebrazione.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sostituiamo le parole contenute in 'selected_word' nel testo contenuto nel file 'Storia.txt'\n",
+    "\n",
+    "# Apriamo il file 'Storia.txt' e ricaviamo la lista di frasi 'data'\n",
+    "with open('Storia.txt', 'r') as file:\n",
+    "    data = file.read().splitlines()\n",
+    "\n",
+    "# In 'def_story' sarà contenuta la storia finale, mentre 'letter_counter' ci aiuterà a iterare su 'selected_word'\n",
+    "def_story = \"\"\n",
+    "letter_counter = 0\n",
+    "\n",
+    "for phrase in data:\n",
+    "\n",
+    "    # Creiamo un iteratore su 'phrase'\n",
+    "    phrase_it = iter(phrase)\n",
+    "    for letter in phrase_it:\n",
+    "\n",
+    "        # Caso in cui ci siano due _\n",
+    "        if (letter == \"_\") and (next(phrase_it) == '_'):\n",
+    "            def_story += selected_word[letter_counter]\n",
+    "            letter_counter += 1\n",
+    "        # Caso in cui ci sia solo un _\n",
+    "        elif (letter == \"_\"):\n",
+    "            def_story += selected_word[letter_counter]\n",
+    "            letter_counter += 1\n",
+    "        # Caso in cui non bisogna sostituire nessuna parola\n",
+    "        else:\n",
+    "            def_story += letter\n",
+    "\n",
+    "print(f\"Ecco la storia definitiva: \\n{def_story}\")"
    ]
   }
  ],
