--- a/Lezione_2/Esercizi_l2.ipynb
+++ b/Lezione_2/Esercizi_l2.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,29 +124,26 @@
      "output_type": "stream",
      "text": [
       "L'array 'a' è: \n",
-      "[[ 1  2]\n",
-      " [ 3  4]\n",
-      " [ 5  6]\n",
-      " [ 7  8]\n",
-      " [ 9 10]]\n"
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n"
      ]
     }
    ],
    "source": [
     "# Creiamo l'array 'a' 2D\n",
     "\n",
-    "a = np.array([[1,2],\n",
-    "              [3,4],\n",
-    "              [5,6],\n",
-    "              [7,8],\n",
-    "              [9,10]])\n",
+    "import numpy as np\n",
+    "\n",
+    "a = np.arange(16).reshape(4,4)\n",
     "\n",
     "print(f\"L'array 'a' è: \\n{a}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,10 +151,10 @@
      "output_type": "stream",
      "text": [
       "L'array 'b' è: \n",
-      "[[3 4]\n",
-      " [7 8]]\n",
+      "[[ 4  5  6  7]\n",
+      " [12 13 14 15]]\n",
       "L'array 'c' è: \n",
-      "[5 6]\n"
+      "[ 8  9 10 11]\n"
      ]
     }
    ],
@@ -175,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,11 +180,10 @@
      "output_type": "stream",
      "text": [
       "Il risultato della divisione tra l'array 'a' e l'array 'c' e: \n",
-      "[[0.2        0.33333333]\n",
-      " [0.6        0.66666667]\n",
-      " [1.         1.        ]\n",
-      " [1.4        1.33333333]\n",
-      " [1.8        1.66666667]]\n"
+      "[[0.         0.11111111 0.2        0.27272727]\n",
+      " [0.5        0.55555556 0.6        0.63636364]\n",
+      " [1.         1.         1.         1.        ]\n",
+      " [1.5        1.44444444 1.4        1.36363636]]\n"
      ]
     }
    ],
