--- a/Lezione_7/Esercizi_l7.ipynb
+++ b/Lezione_7/Esercizi_l7.ipynb
@@ -28,17 +28,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "07e0a5bc",
-   "metadata": {},
-   "source": [
-    "## Punto 1."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "adb28f65",
+   "execution_count": 1,
+   "id": "e98d04eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +48,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07e0a5bc",
+   "metadata": {},
+   "source": [
+    "## Punto 1."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "3c1ad346",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "[131 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "53e11511",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "[131 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "2150ccd6",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "71317da1",
    "metadata": {},
    "outputs": [],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "fb71b895",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "fa9ef7f6",
    "metadata": {},
    "outputs": [
@@ -1383,6 +1383,277 @@
     ")\n",
     "\n",
     "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61257062",
+   "metadata": {},
+   "source": [
+    "# Esercizio 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1e89ea2",
+   "metadata": {},
+   "source": [
+    "**Costruisci una web app con Dash che permette all’utente di scegliere il grado del polinomio per adattare un modello di regressione ai dati non lineari e vedere il risultato aggiornarsi dinamicamente.**\n",
+    "\n",
+    "1. **Genera 100 punti x tra -3 e 3.**\n",
+    "2. **Calcola ad esempio y = x³ - x + rumore.**\n",
+    "3. **Costruisci un'interfaccia Dash con:**\n",
+    "\n",
+    "    - **uno slider per scegliere il grado del polinomio (1–10)**\n",
+    "    - **un grafico Plotly che mostra i dati e la curva stimata.**\n",
+    "\n",
+    "4. **Usa PolynomialFeatures + LinearRegression da scikit-learn per stimare la curva**\n",
+    "\n",
+    " \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fb72ddd",
+   "metadata": {},
+   "source": [
+    "## Punto 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0d67a56b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2.98870447]\n",
+      " [ 0.36223796]\n",
+      " [-0.71412093]\n",
+      " [ 0.14529805]\n",
+      " [ 1.02657946]\n",
+      " [ 0.90889859]\n",
+      " [-1.71590356]\n",
+      " [-1.96111503]\n",
+      " [-0.25396217]\n",
+      " [ 0.98591347]\n",
+      " [-2.10076809]\n",
+      " [ 2.03720551]\n",
+      " [ 2.76717477]\n",
+      " [ 0.93906103]\n",
+      " [ 1.669929  ]\n",
+      " [ 0.85749748]\n",
+      " [-1.20473621]\n",
+      " [-1.59155317]\n",
+      " [ 1.01729134]\n",
+      " [-1.71303334]\n",
+      " [-2.80796576]\n",
+      " [-0.53179688]\n",
+      " [ 1.08481146]\n",
+      " [ 1.93928869]\n",
+      " [ 0.72422549]\n",
+      " [ 0.19953354]\n",
+      " [ 1.55331421]\n",
+      " [ 1.95445292]\n",
+      " [ 0.20628352]\n",
+      " [ 1.62935539]\n",
+      " [-1.14142006]\n",
+      " [-0.99354365]\n",
+      " [ 1.41321986]\n",
+      " [-1.85352372]\n",
+      " [ 0.43672108]\n",
+      " [ 2.45191501]\n",
+      " [-1.46522249]\n",
+      " [ 1.60264351]\n",
+      " [ 2.8123101 ]\n",
+      " [ 1.15612861]\n",
+      " [-0.38732926]\n",
+      " [-2.78883556]\n",
+      " [ 1.93972469]\n",
+      " [ 2.80644962]\n",
+      " [-1.31965941]\n",
+      " [-0.59196101]\n",
+      " [-0.56742684]\n",
+      " [-1.30478999]\n",
+      " [-0.09939856]\n",
+      " [-0.38497627]\n",
+      " [-1.12999945]\n",
+      " [-2.73180132]\n",
+      " [ 2.32117187]\n",
+      " [ 2.60417071]\n",
+      " [ 2.80680012]\n",
+      " [ 1.91230967]\n",
+      " [-0.87469052]\n",
+      " [-0.23022717]\n",
+      " [ 2.35640645]\n",
+      " [-0.27885127]\n",
+      " [-1.70084112]\n",
+      " [ 1.53636509]\n",
+      " [ 0.83929337]\n",
+      " [-1.59186821]\n",
+      " [-1.86520749]\n",
+      " [ 2.34553103]\n",
+      " [-2.08126932]\n",
+      " [-2.75406202]\n",
+      " [ 0.74565598]\n",
+      " [-0.59037172]\n",
+      " [ 2.54301012]\n",
+      " [ 2.88454317]\n",
+      " [-2.02643536]\n",
+      " [ 2.07101643]\n",
+      " [ 0.07560837]\n",
+      " [ 0.91915131]\n",
+      " [ 1.59973881]\n",
+      " [ 0.76188087]\n",
+      " [-0.01600222]\n",
+      " [ 0.55889507]\n",
+      " [-0.96724098]\n",
+      " [-1.3515342 ]\n",
+      " [-1.33696045]\n",
+      " [ 1.1392294 ]\n",
+      " [ 1.99799488]\n",
+      " [ 2.61886254]\n",
+      " [-0.81168772]\n",
+      " [ 1.50280704]\n",
+      " [ 2.22980342]\n",
+      " [ 2.41062762]\n",
+      " [ 1.90839371]\n",
+      " [ 2.79378762]\n",
+      " [-0.84893999]\n",
+      " [-2.59690671]\n",
+      " [-1.60507022]\n",
+      " [ 1.58572958]\n",
+      " [ 1.49146498]\n",
+      " [ 2.11891805]\n",
+      " [ 1.15753005]\n",
+      " [ 2.70752781]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.uniform(-3, 3, 100).reshape(-1, 1)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2fd9001",
+   "metadata": {},
+   "source": [
+    "## Punto 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2cd25cbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_true = x.ravel()**3 - x.ravel()\n",
+    "y = y_true + np.random.normal(scale = 1.0, size = len(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d4d5858",
+   "metadata": {},
+   "source": [
+    "## Punto 3.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "db755c1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dash                      \n",
+    "from dash import dcc, html      \n",
+    "from dash.dependencies import Input, Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7606d69d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x79e1b84002f0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    x, y, test_size=0.2, shuffle=False\n",
+    ")\n",
+    "\n",
+    "app = dash.Dash(__name__)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# App Dash\n",
+    "app = dash.Dash(__name__)\n",
+    "app.layout = html.Div([\n",
+    "    html.H3(\"Seleziona il grado del polinomio\"),\n",
+    "    dcc.Slider(id='slider-numero', min=1, max=10, step=1, value=1,\n",
+    "               marks={i: str(i) for i in range(1, 11)}),\n",
+    "    html.Div(id='output-plot')\n",
+    "])\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('output-plot', 'children'),\n",
+    "    Input('slider-numero', 'value')\n",
+    ")\n",
+    "def plot_with_regression(valore):\n",
+    "    # Modello polinomiale di grado N\n",
+    "    model_polyN = make_pipeline(PolynomialFeatures(valore), LinearRegression())\n",
+    "    model_polyN.fit(x_train, y_train)\n",
+    "\n",
+    "    # Dati per la curva liscia\n",
+    "    x_grid = np.linspace(x.min(), x.max(), 200).reshape(-1, 1)\n",
+    "    y_grid = model_polyN.predict(x_grid)\n",
+    "\n",
+    "    # DataFrame per Plotly\n",
+    "    df_real = pd.DataFrame({\"x\": x.ravel(), \"y\": y})\n",
+    "    df_curve = pd.DataFrame({\"x\": x_grid.ravel(), \"y\": y_grid})\n",
+    "\n",
+    "    # Figura\n",
+    "    fig = px.scatter(df_real, x=\"x\", y=\"y\",\n",
+    "                     title=\"Dynamic regression model\",\n",
+    "                     labels={\"x\": \"x value\", \"y\": \"y value\"},\n",
+    "                     opacity=0.7)\n",
+    "    fig.add_traces(\n",
+    "        px.line(df_curve, x=\"x\", y=\"y\").update_traces(name=f\"Poly degree {valore}\").data\n",
+    "    )\n",
+    "    fig.update_layout(template=\"plotly_white\")\n",
+    "    return dcc.Graph(figure=fig)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server(debug=True)"
    ]
   }
  ],
